Warnings and bootConflict checks for missing system modules